Revision history for WebService-Linode

0.05  Mon Sep 14 2009
    - Apikey is no longer a required argument to the base constructor
    - New method in the base class, apikey for specifying or changing apikey
      at times other than construction
    - New method in WebService::Linode, user_getapikey, given a valid Linode
      username and password, returns $data->{api_key}.  Note: you are
      currently still responsible for calling $api->apikey($key) after
      retrieving the key if you wish to use it for subsequent requests.

0.04  Mon Aug 10 21:45:49 EDT 2009
    - Update to Linode.com API version 2.0 -- This is a pretty big change,
      includes support for Linodes now as well as DNS
    - WebService::Linode::DNS is now deprecated but /should/ continue to work.
      changing to WebService::Linode should be straight forward with a few
      method names changed to match the Linode.com methods with dots replaced
      with under scores.

0.03
    - Patch from Pat Hennessy to use $response->status_line for error
      message when no JSON found in the response (closes #41328)
    - Include Crypt::SSLeay in Makefile.PL prereqs and note about using
      IO::Socket::SSL instead in the README
    - Fix typo in WebService::Linode::DNS docs

0.02  Mon Sep 15 20:45:20 EDT 2008
    - Cache last seen pub ip in examples/dyndns.pl
    - Fix typo in WebService::Linode::DNS (closes #39311)
    - Add tests that were there and should have caught above but
      were missing from MANIFEST to MANIFEST
    - Add MANIFEST.SKIP
    - Add license to Makefile.PL
    - Include gpg signed SIGNATURE file for Module::Signature

0.01  Tue Jun 17 12:21:55 EDT 2008
    - First version, released on an unsuspecting world.
